# archived-clicks-bot

./: README.md
clicksbot-encrypter-master/: Cargo.toml  README.md
clicksbot-encrypter-master/src/: main.rs
clicksbotgui-master/: .gitignore  Cargo.toml  README.md  build.rs
clicksbotgui-master/src/: app.rs  clicksgen.rs  hwid.rs  lib.rs  macro_parser.rs  main.rs
hwid-master/: Cargo.toml  build.rs
hwid-master/src/: main.rs
