[package]
name = "clicksbotgui"
version = "0.1.0"
authors = ["paroxysms (alphaary23@gmail.com)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rodio = "0.17.1"
hound = "3"
winapi = {version = "0.3", features = ["wincon", "winuser"]}
rar = "0.2.0"
zip = "0.5"
sysinfo = "0.29.9"
fakedata_generator = "0.3.0"

serde = { version = "1", features = ["derive"], optional = true }
image = "0.24.5"
eframe = "0.21.3"

[workspace]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
