[package]
name = "hwid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser", "winbase"] }
colored = "2"

[[bin]]
name = "get_hwid"
path = "src/main.rs"

[workspace]
